added ionic project

--- a/database/index.html
+++ b/database/index.html
@@ -8,11 +8,10 @@
     </head>
     <body>
 
-        <form method="Post" action="/">
+        <form method="Post" action="/authenticate">
             <input name="name" type="text"/>
             <input name="age" type="text"/>
-            <input type="submit" type="Submit"/>           
-                       
+            <input type="submit" type="Submit"/>                   
         </form>
     
     </body>
